Remove extra/useless closing p tag

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <p class="">
           I'm a full stack web developer from Sydney, Australia. I started off coding in HTML and CSS over 15 years ago and have spent the better part of a decade in digital marketing, specialising in Search Engine Optimisation and website management.
         </p>      
-        <p class=""></p>
+        <p class="">
           Technology and the digital world is where I'm most comfortable. Continuous learning and development is my modus operandi. I'm currently studying Web Development and I'm most interested in building interactive web applications.
         </p>
         <p>
